force-app/main/default/objects/vlocity_ps__ProgramEnrollmentMember__c/vlocity_ps__ProgramEnrollmentMember__c.object-meta.xml
<CustomObject>
    <label>Program Enrollment Member</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Enrollment Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>