force-app/main/default/objects/vlocity_ps__ProgramEnrollmentMember__c/fields/vlocity_ps__ContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the Contact related to the member.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Enrollment Members</relationshipLabel>
    <relationshipName>Program_Enrollment_Members</relationshipName>
    <type>Lookup</type>
</CustomField>