force-app/main/default/objects/vlocity_ps__ProgramEnrollmentMember__c/fields/vlocity_ps__FirstName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__FirstName__c</fullName>
    <description>First name of the member.</description>
    <label>First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>