force-app/main/default/objects/vlocity_ps__ProgramEnrollmentMember__c/fields/vlocity_ps__LastName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__LastName__c</fullName>
    <description>Last name of the member.</description>
    <label>Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>