force-app/main/default/objects/vlocity_ps__ProgramEnrollmentMember__c/fields/vlocity_ps__MiddleName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__MiddleName__c</fullName>
    <description>Middle name of the member.</description>
    <label>Middle Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>