force-app/main/default/objects/vlocity_ps__ProgramEnrollmentMember__c/fields/vlocity_ps__PartyId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PartyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the Party related to the member.</description>
    <label>Party</label>
    <referenceTo>vlocity_ps__Party__c</referenceTo>
    <relationshipLabel>Program Enrollment Members</relationshipLabel>
    <relationshipName>Program_Enrollment_Members</relationshipName>
    <type>Lookup</type>
</CustomField>