force-app/main/default/objects/vlocity_ps__ProgramEnrollmentMember__c/fields/vlocity_ps__ProgramEnrollment__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ProgramEnrollment__c</fullName>
    <label>Program Enrollment</label>
    <referenceTo>vlocity_ps__ProgramEnrollment__c</referenceTo>
    <relationshipLabel>Program Enrollment Members</relationshipLabel>
    <relationshipName>ProgramEnrollmentMembers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>