force-app/main/default/objects/vlocity_ps__ProgramEnrollmentMember__c/fields/vlocity_ps__Role__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Role__c</fullName>
    <description>Role of the member such as &quot;Head of Household&quot; or &quot;Partner.&quot;</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Head of Household</fullName>
            </value>
            <value>
                <fullName>Partner, Dependent - Child</fullName>
            </value>
            <value>
                <fullName>Dependent - Extended Family</fullName>
            </value>
            <value>
                <fullName>Dependent - Roommate / Boarder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>